@@ -1,3 +1,8 @@
+Wed Oct 13 11:18:45 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * docs/compiler.html:
+          Explained the -Gexr option.
+
 Wed Oct 13 06:27:40 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * TAO_IDL/be/be_codegen.cpp:
